WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274782
[WebGPU] CommandsMixin::computedSizeOverflows does not correctly handle overflow
https://bugs.webkit.org/show_bug.cgi?id=274782
Summary
[WebGPU] CommandsMixin::computedSizeOverflows does not correctly handle overflow
Mike Wyrzykowski
Reported
2024-05-28 09:16:50 PDT
[WebGPU] CommandsMixin::computedSizeOverflows does not correctly handle overflow
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-05-28 09:17:03 PDT
radar://128865893
Mike Wyrzykowski
Comment 2
2024-05-28 10:56:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29181
EWS
Comment 3
2024-05-28 13:24:42 PDT
Committed
279401@main
(9b92567e1389): <
https://commits.webkit.org/279401@main
> Reviewed commits have been landed. Closing PR #29181 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug