[WebGPU] CommandsMixin::computedSizeOverflows does not correctly handle overflow https://bugs.webkit.org/show_bug.cgi?id=274782 <radar://128865893>

Reviewed by Tadeu Zagallo.

Handle overflow in case a value greater than 2^53 - 1 is passed to these
functions.

Attempted to write a test but since 2^53 - 1 is the max value for Number
in JavaScript, this issue is only reproducible when sending messages directly
from the IPC layer.

* Source/WebGPU/WebGPU/CommandsMixin.mm:
(WebGPU::CommandsMixin::computedSizeOverflows):
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::setIndexBuffer):
(WebGPU::RenderBundleEncoder::setVertexBuffer):

Canonical link: https://commits.webkit.org/279401@main